@@ -1,3 +1,8 @@
+2021-11-06  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/physics_demo.rb: Added
+	* examples/textures_background_scrolling.rb: Added
+
 2021-11-05  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/models_box_collisions.rb: Added
